gungraun/tests/ui/test_library_benchmark_group_when_invalid.stderr
error: A library_benchmark_group! needs a name

       hint: library_benchmark_group!(name = some_ident; benchmarks = ...);
 --> tests/ui/test_library_benchmark_group_when_invalid.rs:6:5
  |
6 |     library_benchmark_group!(benchmarks = some_func);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A library_benchmark_group! needs at least 1 benchmark function annotated with #[library_benchmark]

       hint: library_benchmark_group!(name = some_ident, benchmarks = some_library_benchmark);
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:12:5
   |
12 | /     library_benchmark_group!(
13 | |         name = some_name,
14 | |         benchmarks =
15 | |     );
   | |_____^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the library_benchmark_group! macro to set up library benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) or the docs (https://docs.rs/gungraun/latest/gungraun) for further details.

       hint: library_benchmark_group!(name = some_name, benchmarks = [ bench_1, bench_2 ])
  --> tests/ui/test_library_benchmark_group_when_invalid.rs:21:5
   |
21 |     library_benchmark_group!(something);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `library_benchmark_group` (in Nightly builds, run with -Z macro-backtrace for more info)
